--- a/halalapp/templates/halalapp/event.html
+++ b/halalapp/templates/halalapp/event.html
@@ -3,7 +3,7 @@
 {% block content %}
 <body>
   <div>
-    <table>
+    <table style="padding-top:25px;">
       <tr>
         <th style="width:280px; font-size:30px;" onclick="mainclick()">할랄 추천</th>
         <th style="width:280px; font-size:30px;" onclick="goodsclick()">할랄 상품</th>
@@ -17,6 +17,12 @@
         <td><hr style="border: solid 3px rgb(51,172,128);"></td>
       </tr>
     </table>
+  </div>
+
+
+
+  <div style="float:left;">
+    <div  style="width:90vw; height:10vh;"><div>
   </div>
 </body>
 
