--- a/halalapp/templates/halalapp/main.html
+++ b/halalapp/templates/halalapp/main.html
@@ -3,7 +3,7 @@
 {% block content %}
 <body>
   <div>
-    <table>
+    <table style="padding-top:25px;">
       <tr>
         <th style="width:280px; font-size:30px; color:rgb(51,172,128);" onclick="mainclick()">할랄 추천</th>
         <th style="width:280px; font-size:30px;" onclick="goodsclick()">할랄 상품</th>
@@ -35,6 +35,9 @@
     <div style="float:right;">
       <img src="{% static 'halalapp/img/sample.jpg'%}" style="width:48vw; height:40vh;">
     </div>
+
+
+
     <div style="float:left;">
       <div  style="width:90vw; height:10vh;"><div>
     </div>
