--- a/halalapp/templates/halalapp/search.html
+++ b/halalapp/templates/halalapp/search.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-
+<html lang="ko">
 <head>
   <meta charset="utf-8">
     <link rel="stylesheet" href="./test.css">
@@ -114,3 +114,4 @@
             </table>
     </div>
 </body>
+</html>
