검색페이지, 카테고리 이미지 위치 조정
검색페이지, 카테고리 이미지 위치 조정

하단 네비게이션 바 이미지 위치 조절입니다

--- a/halalapp/templates/halalapp/test.css
+++ b/halalapp/templates/halalapp/test.css
@@ -81,5 +81,9 @@ a.btn{
     margin-bottom: 3%;
 }
 
+table tr th{
+  text-align: center;
+}
+
 .smenu a:hover{ color: rgb(51, 172, 128); text-decoration: none;}
 a.btn:hover{ color: rgb(51, 172, 128);}
